[gd_scene load_steps=5 format=3 uid="uid://xltolg1dl338"]

[ext_resource type="Texture2D" uid="uid://cpjra7xgj1427" path="res://core/resources/asteroid_1.tres" id="1_vv5gc"]
[ext_resource type="Script" uid="uid://d0fapxji327np" path="res://core/scenes/objects/script/asteroid.gd" id="1_wsnd0"]
[ext_resource type="PackedScene" uid="uid://d12dcf3qc13ai" path="res://reusable/components/health.tscn" id="3_5qthl"]
[ext_resource type="PackedScene" uid="uid://mun431b1178s" path="res://reusable/components/screen_wrap.tscn" id="4_fgyw7"]

[node name="asteroid_body (RigidBody2D)" type="RigidBody2D"]
collision_layer = 4
collision_mask = 7
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 10
linear_damp_mode = 1
constant_torque = 500.0
script = ExtResource("1_wsnd0")

[node name="asteroid_texture" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_vv5gc")

[node name="asteroid_collision" type="CollisionPolygon2D" parent="."]
position = Vector2(-3, -1)
polygon = PackedVector2Array(2, 15, 13, 10, 17, 1, 14, -4, 7, -10, 4, -13, -1, -14, -5, -11, -7, -8, -9, -5, -11, 2, -8, 7)

[node name="Health" parent="." instance=ExtResource("3_5qthl")]

[node name="Screen_Wrap" parent="." instance=ExtResource("4_fgyw7")]

[connection signal="body_entered" from="." to="." method="_on_collision"]
[connection signal="zero_health_reached" from="Health" to="." method="_on_health_zero_health_reached"]
